Working on index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,26 @@
         <title>Hrushikesh Vaidya</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:wght@300;400;500;600;700&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div id="jumbotron">
+            <div class="variable-text" id="before">
+                <span class="before-link">github.com/</span>
+                <span>linkedin.com/in/</span>
+                <span>instagram.com/</span>
+                <span>linktr.ee/</span>
+                <span>classberg.com/u/</span>
+            </div>
+            <div class="fixed-text">hrushikeshrv</div>
+            <div class="variable-text" id="after">@gmail.com</div>
+        </div>
+        <div class="footer-bar">
 
+        </div>
     </body>
+    <script>
+        const before = document.querySelector('#before');
+        const after = document.querySelector('#after');
+    </script>
 </html>
