--- a/index.html
+++ b/index.html
@@ -96,10 +96,30 @@
 
 <!--    Projects    -->
         <div class="flexbox-column page pad-30 page-2">
-            <h1 class="center mt-30">Projects</h1>
-            <div class="flexbox-row pad-30">
-                <div class="project">
-                    <h2>ClassBerg</h2>
+            <h1 class="mt-30 ml-30 big">Projects</h1>
+            <div class="flexbox-row pad-10 project-container">
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
+                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                    </div>
+                    <div class="flexbox-column ml-30">
+                        <h2 class="big mbt-10">ClassBerg</h2>
+                        <span class="project-desc">
+                            ClassBerg provides JEE, CET, and NEET coaching classes with a student
+                            testing framework, virtual classrooms, and a question database.
+                        </span>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-external-link" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
+                                  <line x1="10" y1="14" x2="20" y2="4" />
+                                  <polyline points="15 4 20 4 20 9" />
+                                </svg>
+                                <span class="space-lr"><a href="https://www.classberg.com" target="_blank">classberg.com</a></span>
+                            </span>
+                        </span>
+                    </div>
                 </div>
                 <div class="project">
                     <h2></h2>
