--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <!--    Projects    -->
         <div class="flexbox-column page pad-30 page-2">
-            <h1 class="mt-30 ml-30 big">Projects</h1>
+            <h1 class="mt-30 ml-30 big" id="projects">Projects</h1>
             <div class="flexbox-row pad-10 project-container">
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
@@ -119,10 +119,200 @@
                                 <span class="space-lr"><a href="https://www.classberg.com" target="_blank">classberg.com</a></span>
                             </span>
                         </span>
+                        <span class="flexbox-row mt-10 flair">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                              <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                              <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                              <line x1="11" y1="6" x2="11" y2="6.01" />
+                              <line x1="13" y1="18" x2="13" y2="18.01" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-html5" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-css3" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-javascript" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+                              <path d="M7.5 8h3v8l-2 -1" />
+                              <path d="M16.5 8h-2.5a0.5 .5 0 0 0 -.5 .5v3a0.5 .5 0 0 0 .5 .5h1.423a0.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-sentry" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M3 18a1.93 1.93 0 0 0 .306 1.076a2 2 0 0 0 1.584 .924c.646 .033 -.537 0 .11 0h3a4.992 4.992 0 0 0 -3.66 -4.81c.558 -.973 1.24 -2.149 2.04 -3.531a8.997 8.997 0 0 1 5.62 8.341h4c.663 0 2.337 .005 3 0a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-1.84 3.176c4.482 2.05 7.6 6.571 7.6 11.824" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-stripe" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                              <path d="M11.453 8.056c0 -.623 .518 -.979 1.442 -.979c1.69 0 3.41 .343 4.605 .923l.5 -4c-.948 -.449 -2.82 -1 -5.5 -1c-1.895 0 -3.373 .087 -4.5 1c-1.172 .956 -2 2.33 -2 4c0 3.03 1.958 4.906 5 6c1.961 .69 3 .743 3 1.5c0 .735 -.851 1.5 -2 1.5c-1.423 0 -3.963 -.609 -5.5 -1.5l-.5 4c1.321 .734 3.474 1.5 6 1.5c2.004 0 3.957 -.468 5.084 -1.36c1.263 -.979 1.916 -2.268 1.916 -4.14c0 -3.096 -1.915 -4.547 -5.003 -5.637c-1.646 -.605 -2.544 -1.07 -2.544 -1.807z" />
+                            </svg>
+                        </span>
                     </div>
                 </div>
-                <div class="project">
-                    <h2></h2>
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
+                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                    </div>
+                    <div class="flexbox-column ml-30">
+                        <h2 class="big mbt-10">docxlatex</h2>
+                        <span class="project-desc">
+                            docxlatex is a python module for extracting text from .docx files, including support for mathematical and
+                            chemical equations, primarily for use with tools like MathJax.
+                        </span>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/hrushikeshrv/docxlatex" target="_blank">source code</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link space-lr">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-license" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M15 21h-9a3 3 0 0 1 -3 -3v-1h10v2a2 2 0 0 0 4 0v-14a2 2 0 1 1 2 2h-2m2 -4h-11a3 3 0 0 0 -3 3v11" />
+                                  <line x1="9" y1="7" x2="13" y2="7" />
+                                  <line x1="9" y1="11" x2="13" y2="11" />
+                                </svg>
+                                <span class="space-lr"><a href="https://hrus.in/docxlatex" target="_blank">documentation</a></span>
+                            </span>
+                        </span>
+                        <div class="flexbox-row mt-10 flair">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                                <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                                <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                                <line x1="11" y1="6" x2="11" y2="6.01" />
+                                <line x1="13" y1="18" x2="13" y2="18.01" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-open-source" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 3a9 9 0 0 1 3.618 17.243l-2.193 -5.602a3 3 0 1 0 -2.849 0l-2.193 5.603a9 9 0 0 1 3.617 -17.244z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
+                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                    </div>
+                    <div class="flexbox-column ml-30">
+                        <h2 class="big mbt-10">hrushikeshrv/aoc</h2>
+                        <span class="project-desc">
+                            A repository of my attempts at the yearly programming contest Advent of Code, conducted every December.
+                        </span>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg>
+                                <span class="space-lr"><a href="https://github.com/hrushikeshrv/aoc" target="_blank">source code</a></span>
+                            </span>
+                        </span>
+                        <div class="flexbox-row mt-10 flair">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                                <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                                <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                                <line x1="11" y1="6" x2="11" y2="6.01" />
+                                <line x1="13" y1="18" x2="13" y2="18.01" />
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-open-source" width="28" height="28" viewBox="0 0 24 24" stroke-width="1" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M12 3a9 9 0 0 1 3.618 17.243l-2.193 -5.602a3 3 0 1 0 -2.849 0l-2.193 5.603a9 9 0 0 1 3.617 -17.244z" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
+                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                    </div>
+                    <div class="flexbox-column ml-30">
+                        <h2 class="big mbt-10">MIT OCW Notes</h2>
+                        <span class="project-desc">
+                            A Google Doc containing my notes for all the MIT OCW courses I have taken, updated daily.
+                        </span>
+                        <div class="project-desc">
+                            <ul>
+                                <li>6.006 - Introduction to Algorithms</li>
+                                <li>6.042J - Mathematics for Computer Science</li>
+                                <li>6.046J - Design and Analysis of Algorithms</li>
+                                <li>6.S095 - Programming For The Puzzled</li>
+                            </ul>
+                        </div>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-google" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M17.788 5.108a9 9 0 1 0 3.212 6.892h-8" />
+                                </svg>
+                                <span class="space-lr"><a href="https://docs.google.com/document/d/1R45m9aDnBevrHaDSq0DdEzmRHZFV40cQ41g7GezPBK8/edit?usp=sharing" target="_blank">document</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link space-lr">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-world" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <circle cx="12" cy="12" r="9" />
+                                  <line x1="3.6" y1="9" x2="20.4" y2="9" />
+                                  <line x1="3.6" y1="15" x2="20.4" y2="15" />
+                                  <path d="M11.5 3a17 17 0 0 0 0 18" />
+                                  <path d="M12.5 3a17 17 0 0 1 0 18" />
+                                </svg>
+                                <span class="space-lr"><a href="https://docs.google.com/document/d/e/2PACX-1vQiIbawhPSDwLr4rJ2lmZRRm_CRoCyskeMOsaTOeek8Yf6KJ5-8zMKXU7isc2wnd9duRTzWbhNgjOOJ/pub" target="_blank">webpage</a></span>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+                <div class="flexbox-row pad-50 mar-20 project">
+                    <div class="flexbox-column">
+                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                    </div>
+                    <div class="flexbox-column ml-30">
+                        <h2 class="big mbt-10">Deep Learning Notes</h2>
+                        <span class="project-desc">
+                            A Google Doc containing my notes for deeplearning.ai's deep learning courses and specializations on
+                            <a href="https://coursera.org" target="_blank">coursera</a>.
+                        </span>
+                        <div class="project-desc">
+                            <ul>
+                                <li>Deep Learning and Neural Networks</li>
+                                <li>Improving Deep Neural Networks</li>
+                                <li>Structuring Machine Learning Projects</li>
+                                <li>Convolutional Neural Networks</li>
+                                <li>Sequence Models</li>
+                                <li>TensorFlow Developer Certificate</li>
+                            </ul>
+                        </div>
+                        <span class="flexbox-row pad-10 project-links">
+                            <span class="flexbox-row ajc link">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-google" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <path d="M17.788 5.108a9 9 0 1 0 3.212 6.892h-8" />
+                                </svg>
+                                <span class="space-lr"><a href="https://docs.google.com/document/d/1VRb2JhRdRCFga31wfWDnOGQ_f0SRPn89FLWKIiEQifo/edit?usp=sharing" target="_blank">document</a></span>
+                            </span>
+                            <span class="flexbox-row ajc link space-lr">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-world" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                  <circle cx="12" cy="12" r="9" />
+                                  <line x1="3.6" y1="9" x2="20.4" y2="9" />
+                                  <line x1="3.6" y1="15" x2="20.4" y2="15" />
+                                  <path d="M11.5 3a17 17 0 0 0 0 18" />
+                                  <path d="M12.5 3a17 17 0 0 1 0 18" />
+                                </svg>
+                                <span class="space-lr"><a href="https://docs.google.com/document/d/e/2PACX-1vQcNAP_Amu-qUr8boGFIQQzBqHX9KWGGHinzoDpYuha_6_OJRaQZLTPRB5kEWYv7xWFqXg3mn_fHt47/pub" target="_blank">webpage</a></span>
+                            </span>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
