Fix responsivity issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="page">
+        <div class="page" style="overflow: hidden; max-height: 100vh;">
             <div class="flexbox-column ajc header-bar">
             <span id="header-text" class="flexbox-column ajc">
                 <a href="https://github.com/hrushikeshrv" target="_blank">github.com/hrushikeshrv</a>
@@ -102,7 +102,7 @@
                     <div class="flexbox-column">
                         <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
                     </div>
-                    <div class="flexbox-column ml-30">
+                    <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">ClassBerg</h2>
                         <span class="project-desc">
                             ClassBerg provides JEE, CET, and NEET coaching classes with a student
@@ -159,7 +159,7 @@
                     <div class="flexbox-column">
                         <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
                     </div>
-                    <div class="flexbox-column ml-30">
+                    <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">docxlatex</h2>
                         <span class="project-desc">
                             docxlatex is a python module for extracting text from .docx files, including support for mathematical and
@@ -203,7 +203,7 @@
                     <div class="flexbox-column">
                         <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
                     </div>
-                    <div class="flexbox-column ml-30">
+                    <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">hrushikeshrv/aoc</h2>
                         <span class="project-desc">
                             A repository of my attempts at the yearly programming contest Advent of Code, conducted every December.
@@ -237,7 +237,7 @@
                     <div class="flexbox-column">
                         <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
                     </div>
-                    <div class="flexbox-column ml-30">
+                    <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">MIT OCW Notes</h2>
                         <span class="project-desc">
                             A Google Doc containing my notes for all the MIT OCW courses I have taken, updated daily.
@@ -276,7 +276,7 @@
                     <div class="flexbox-column">
                         <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
                     </div>
-                    <div class="flexbox-column ml-30">
+                    <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">Deep Learning Notes</h2>
                         <span class="project-desc">
                             A Google Doc containing my notes for deeplearning.ai's deep learning courses and specializations on
@@ -300,7 +300,7 @@
                                 </svg>
                                 <span class="space-lr"><a href="https://docs.google.com/document/d/1VRb2JhRdRCFga31wfWDnOGQ_f0SRPn89FLWKIiEQifo/edit?usp=sharing" target="_blank">document</a></span>
                             </span>
-                            <span class="flexbox-row ajc link space-lr">
+                            <span class="flexbox-row ajc link">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-world" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                   <circle cx="12" cy="12" r="9" />
