--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="flexbox-row pad-10 project-container">
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                        <img src="images/classberg-logo.svg" alt="ClassBerg" width="100px" height="125px">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">ClassBerg</h2>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                        <img src="images/docxlatex.svg" alt="ClassBerg" width="100px" height="125px">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">docxlatex</h2>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                        <img src="images/hrushikeshrv-aoc.svg" alt="ClassBerg" width="100" height="124">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">hrushikeshrv/aoc</h2>
@@ -246,7 +246,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                        <img src="images/mitocw.svg" alt="ClassBerg" width="100" height="100">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">MIT OCW Notes</h2>
@@ -285,7 +285,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/classberg-logo.png" alt="ClassBerg" width="100px" height="125px">
+                        <img src="images/dlai.svg" alt="ClassBerg" width="100" height="100">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">Deep Learning Notes</h2>
