--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
                     <div class="variable-text" id="before">
                         <div id="left-wrapper">
                             <span class="before-link" data-site="instagram" data-link-id="1" data-side="left">instagram.com/</span>
-                            <span class="before-link" data-site="linkedin" data-link-id=2" data-side="left">linkedin.com/in/</span>
                             <span class="before-link active" data-site="github" data-link-id="3" data-side="left">github.com/</span>
-                            <span class="before-link" data-site="linktree" data-link-id="4" data-side="left">linktr.ee/</span>
-                            <span class="before-link" data-site="classberg" data-link-id="5" data-side="left">classberg.com/u/</span>
+                            <span class="before-link" data-site="linkedin" data-link-id=2" data-side="left">linkedin.com/in/</span>
                         </div>
                     </div>
                     <div class="fixed-text">hrushikeshrv</div>
@@ -76,14 +74,6 @@
                     </svg>
                     <span>Instagram</span>
                 </div>
-                <div class="flexbox-column ajc logo" data-site="linktree">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-link" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" />
-                        <path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" />
-                    </svg>
-                    <span>LinkTree</span>
-                </div>
                 <div class="flexbox-column ajc logo" data-site="gmail">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-at" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -102,6 +92,17 @@
                     </svg>
                     <span>ClassBerg</span>
                 </div>
+            </div>
+        </div>
+<!--    About    -->
+        <div class="flexbox-row page about">
+            <div class="flexbox-column column-half pad-50 ajc me"></div>
+            <div class="flexbox-column column-half pad-50 ajc bio">
+                <span id="bio-text" class="pad-20">
+                    I'm an electronics engineering student at the
+                    <a class="a" href="https://www.google.com/search?q=college of engineering, pune" target="_blank">College of Engineering, Pune</a>,
+                    by day, and a self-taught computer science student the rest of the time.
+                </span>
             </div>
         </div>
 
@@ -168,7 +169,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/docxlatex.svg" alt="ClassBerg" width="100px" height="125px">
+                        <img src="images/docxlatex.svg" alt="pip install docxlatex" width="100px" height="125px">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">docxlatex</h2>
@@ -212,7 +213,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/hrushikeshrv-aoc.svg" alt="ClassBerg" width="100" height="124">
+                        <img src="images/hrushikeshrv-aoc.svg" alt="Advent Of Code" width="100" height="124">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">hrushikeshrv/aoc</h2>
@@ -246,7 +247,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/mitocw.svg" alt="ClassBerg" width="100" height="100">
+                        <img src="images/mitocw.svg" alt="MIT OCW Logo" width="100" height="100">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">MIT OCW Notes</h2>
@@ -285,7 +286,7 @@
                 </div>
                 <div class="flexbox-row pad-50 mar-20 project">
                     <div class="flexbox-column">
-                        <img src="images/dlai.svg" alt="ClassBerg" width="100" height="100">
+                        <img src="images/dlai.svg" alt="deeplearning.ai logo" width="100" height="100">
                     </div>
                     <div class="flexbox-column project-content">
                         <h2 class="big mbt-10">Deep Learning Notes</h2>
