--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Hrushikesh Vaidya</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chakra+Petch:wght@300;400;500;600;700&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -96,7 +99,36 @@
         </div>
 <!--    About    -->
         <div class="flexbox-row page about">
-            <div class="flexbox-column column-half pad-50 ajc me"></div>
+            <div class="flexbox-column column-half pad-50 ajc me">
+                <div class="flexbox-column aifs mb-50">
+                    <h1 class="mt-30 nametag" style="margin-bottom: 0;">Hrushikesh</h1>
+                    <h1 class="mb-30 nametag" style="margin-top: 0;">Vaidya</h1>
+                    <div class="flexbox-row ajc mono-font">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-server" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <rect x="3" y="4" width="18" height="8" rx="3" />
+                          <rect x="3" y="12" width="18" height="8" rx="3" />
+                          <line x1="7" y1="8" x2="7" y2="8.01" />
+                          <line x1="7" y1="16" x2="7" y2="16.01" />
+                        </svg>
+                        <span style="margin-left: 5px;">Backend Developer</span>
+                    </div>
+                    <div class="flexbox-row ajc mono-font">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f8f8f" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                            <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                            <path d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                            <line x1="11" y1="6" x2="11" y2="6.01" />
+                            <line x1="13" y1="18" x2="13" y2="18.01" />
+                        </svg>
+                        <span style="margin-left: 5px;">Python, Django</span>
+                    </div>
+                </div>
+                <div class="flexbox-column aifs">
+
+                </div>
+            </div>
             <div class="flexbox-column column-half pad-50 ajc bio">
                 <span id="bio-text" class="pad-20">
                     I'm an electronics engineering student at the
