--- a/index.html
+++ b/index.html
@@ -125,8 +125,23 @@
                         <span style="margin-left: 5px;">Python, Django</span>
                     </div>
                 </div>
-                <div class="flexbox-column aifs">
-
+                <div class="flexbox-column timeline-container column-twothird pad-30 mt-30">
+                    <div class="flexbox-column pad-30 timeline-item aifs" style="margin-top: -86px;">
+                        <h2 class="mono-font">&#127874;</h2>
+                        <span class="timeline-year">2002</span>
+                    </div>
+                    <div class="flexbox-column pad-30 timeline-item aifs">
+                        <h2 class="mono-font">National Institute of Technology, Calicut</h2>
+                        <span class="timeline-year">2019-2020</span>
+                        <span class="timeline-category">B. Tech, Engineering Physics</span>
+                        <span class="timeline-comment"></span>
+                    </div>
+                    <div class="flexbox-column pad-30 timeline-item aifs">
+                        <h2 class="mono-font">College of Engineering, Pune</h2>
+                        <span class="timeline-year">2020-Present</span>
+                        <span class="timeline-category">B. Tech, Electronics & Telecommunication Engineering</span>
+                        <span class="timeline-comment"></span>
+                    </div>
                 </div>
             </div>
             <div class="flexbox-column column-half pad-50 ajc bio">
