--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <meta charset="UTF-8">
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="author" content="Hrushikesh Vaidya | @hrushikeshrv on GitHub">
+        <meta name="theme-color" content="rgb(40, 116, 255)">
+        <meta name="description" content="Hi, I'm Hrushikesh Vaidya, a self-taught computer science student and web developer.">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Hrushikesh Vaidya</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
